added lottie animation and fixed front components

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -184,7 +184,7 @@
         }
       },
       "topbar_component": {
-        "home": "Home",
+        "home": "About Us",
         "pages": {
           "aboutUs": "About Us",
           "howItWorks": "How It Works",
@@ -209,7 +209,7 @@
         "elements": "elements",
         "blog": "Blog",
         "contactUs": "Contact Us",
-        "smallBtn" :"Create Account"
+        "smallBtn" :"Become A Client"
       }
     }
   }
