--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -184,7 +184,7 @@
             }
           },
           "topbar_component": {
-            "home": "Accueil",
+            "home": "A Propos",
             "pages":{
               "aboutUs": "À propos de nous",
               "howItWorks": "Comment ça marche",
@@ -200,16 +200,16 @@
               "page404": "404 Page"
             },
             "services": {
-              "services": "Services",
+              "services": "Actionnaires",
               "personalLoan": "Prêt personnel",
               "businessLoan": "Prêt d'entreprise",
               "homeLoan": "Prêt immobilier",
               "educationLoan": "Prêt étudiant"
             },
-            "elements": "éléments",
+            "elements": "Services",
             "blog": "Blog",
             "contactUs": "Contactez-nous",
-            "smallBtn" :"Créer un compte"
+            "smallBtn" :"Devenir Client"
           }       
     }
   }
