fixed styling problems

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,7 +30,7 @@
         "description": "The vast majority of clients place their utmost trust in our institution, recognizing us as the foremost authority in providing unparalleled loan solutions tailored to their unique financial needs and aspirations.",
         "checkYourRate": "Check Your Rate",
         "simulateLoan": "Simulate a loan",
-        "Rising":"Amount of the loan:",
+        "Rising":"Amount of the loan (TND):",
         "Periode":"Loan duration (in years):",
         "Paiement":"Estimated monthly payment for 5% interest rate :",
         "checkDesc":"You should test your credit score rating earlier than making use of for a personal loan.",
