--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -30,7 +30,7 @@
       "description": "La grande majorité des clients accordent leur plus grande confiance à notre institution, nous reconnaissant comme la principale autorité en matière de fourniture de solutions de prêt sans précédent, adaptées à leurs besoins et aspirations financiers uniques.",
       "checkYourRate": "Vérifiez votre taux",
       "simulateLoan": "Simuler un prêt",
-      "Rising":"Montant du prêt :",
+      "Rising":"Montant du prêt (en TND):",
       "Periode":"Durée du prêt (en années):",
       "Paiement":"Paiement mensuel estimé pour un taux d'intérêt de 5% :",
       "checkDesc":"Vous devriez tester votre cote de crédit avant de demander un prêt personnel.",
