Completed all interfaces for client Corporate inscription

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -344,5 +344,160 @@
       "resend_otp_info": "Vous pouvez re-envoyer le code OTP dans",
       "time" : " secondes"
     }
+   
+  }
+,
+  "professionnel":{
+    "title":"Bienvenue chez BFI BANK!",
+    "subheading":"Commencez dès maintenant en remplissant avec vos données.",
+    "welcomeButton":"C'est parti !",
+    "nextButton":"Suivant",
+    "backButton":"Retour",
+
+    "mand_informations":{
+      "formTitle":"Informations du mandataire",
+      "gender":"Civilité",
+      "optionValue":"Choisissez..",
+      "option1":"Monsieur",
+      "option2":"Madame",
+      "genderAlert":"Veuillez choisir votre genre",
+      "firstName":"Prénom",
+      "firstNameAlert":"Entrez un prénom valide",
+      "firstNameAlert2":"Le prénom ne peut pas contenir des chiffres",
+      "lastName":"Nom",
+      "lastNameAlert":"Entrez un nom valide",
+      "lastNameAlert2":"Le nom ne peut pas contenir des chiffres",
+      "photo":"Photo de profil",
+      "email":"Email",
+      "emailAlert":"Entrez un email valide",
+      "emailAlert2":"Entrez une adresse email valide",
+      "phone":"Téléphone",
+      "phoneAlert":"Entrez votre numéro",
+      "tPiece":"Type de la pièce",
+      "selectTypeOfPiece":"Passeport",
+      "pIdentity":"Pièce identité",
+      "passport":"Passeport",
+      "nationalID":"Carte d'identité nationale"
+    },
+    "ent_informations":{
+      "formTitle":"Informations de l'entreprise",
+      "formJuridique":"Forme juridique",
+      "optionValue":"Choisissez..",
+      "option1":"Société à responsabilité limitée (SARL) ",
+      "option2":"Entreprise individuelle (EI)  ",
+      "option3":"Entreprise unipersonnelle à responsabilité limitée (EURL) ",
+      "option4":"Société en nom collectif (SNC) ",
+      "option5":"Société à responsabilité limitée (SARL) ",
+      "option6":"Société en commandite simple (SCS) ",
+      "option7":"Société par actions simplifiée (SAS) ",
+      "option8":"Société par actions simplifiée unipersonnelle (SASU)",
+      "genderAlert":"Veuillez choisir votre genre",
+      "raisonSociale":"Raison sociale",
+      "firstNameAlert":"Entrez un prénom valide",
+      "firstNameAlert2":"Le prénom ne peut pas contenir des chiffres",
+      "catégorie":"Catégorie",
+      "creation_date":"Date Création de l'entreprise",
+      "lastNameAlert":"Entrez un nom valide",
+      "lastNameAlert2":"Le nom ne peut pas contenir des chiffres",
+      "codeRCCM":"Code RCCM",
+      "codeNIF":"Code NIF",
+      "emailAlert":"Entrez un email valide",
+      "emailAlert2":"Entrez une adresse email valide",
+      "phone":"Téléphone",
+      "abreviation":"Abreviation",
+      "NIFalerte":"Entrez un code NIF valide",
+      "NIFalerte1":"Le code  NIF doit être une chaine de caractère",
+      "RCCMalerte":"Entrez un code RCCM valide",
+      "RCCMalerte1":"Le code RCCM doit être une chaine de caractère"
+    },
+    "address": {
+      "title": "Adresse légale",
+      "country": "Entrer votre pays",
+      "city": "Ville",
+      "neighbourhood": "Quartier",
+      "zipCode": "Code ZIP"
+    },
+    "additionalInfo":{
+      "title": "Autres informations",
+      "natureSecteur": "Nature du secteur",
+      "select_nature": "Veuillez choisir la nature de secteur",
+      "private_sector": "Secteur Privé",
+      "state_sector": "Secteur Etatique",
+      "développement": "Développement de logiciels et applications",
+      "domaine": "Domaine d'activité",      
+      "ressources_humaines": "Gestion des ressources humaines",
+      "commerce": "Commerce électronique et marketing en ligne",
+      "enter_valid_profession": "Entrez une profession valide",
+      "profession_cannot_contain_numbers": "La profession ne peut pas contenir de chiffres",
+      "juridique_type": "Type de la pièce",
+      "petite": "Petite entreprise",
+      "moyenne": "Moyenne entreprise",
+      "grande": "Grande entreprise",
+      "taille": "Taille de l'entreprise",
+      "select_piece_type": "Veuillez choisir le type de la pièce",
+      "select_taille": "Veuillez choisir la taille de l'entreprise",
+      "select_domaine": "Veuillez choisir le domaine d'activité",
+      "national_identity_card": "Carte d'identité nationale",
+      "passport": "Passeport",
+      "piece_number": "Numéro de la pièce",
+      "enter_valid_number": "Entrez un numéro valide",
+      "piece_number_should_contain_only_numbers": "Le numéro de la pièce ne doit contenir que des chiffres",
+      "expiration_date": "Date d'expiration de la pièce",
+      "pieceType": "Type pièce juridique",
+      "juridique_photo": "Pièce juridique",
+      "valid_extensions_are": "Les extensions valides sont : .jpg, .jpeg, .png, .pdf",
+      "referral_code": "Code parrainage",
+      "code_should_contain_four_digits": "Le code doit contenir 4 chiffres",
+      "bancaires":"Services financiers et bancaires",
+      "santé":"Santé et services médicaux",
+      "transport":"Transport et logistiques"
+
+    },
+
+    "general_conditions": {
+      "title": "Conditions générales",
+      "general_conditions_description": "Ce document décrit les modalités d'utilisation de notre application web ou mobile Banking que nous désignons communément par le terme « plateforme ». Il permet ainsi de déterminer les responsabilités de chacun, mais vous renseigne également sur la propriété intellectuelle et la protection de vos données personnelles.",
+      "technical_partner": "Partenaire Technique",
+      "ventis_technology": "Ventis Technologie",
+      "simplified_joint_stock_company": "Société par action Simplifiée au capital de 1 000 000 XAF",
+      "address_batterie_iv": "Batterie IV, Libreville, Gabon",
+      "registered_commerce_registry_number": "Immatriculée au registre de commerce sous le RCCM n° GA-LBV-01-2021-B16-00016",
+      "nif": "NIF: 202101003285-T",
+      "website": "Site internet",
+      "link": "www.ventis.group",
+      "tel": "Tél",
+      "accept_conditions_statement": "J'accepte les conditions générales de vente et d'utilisation, et certifie la sincérité des informations transmises.",
+      "accept": "J'accepte",
+      "accept_conditions_warning": "Veuillez d'abord accepter les conditions."
+    },
+
+    "authentication":{
+      "title": "Création de mot de passe",
+      "description": "Ce mot de passe, une fois crée il vous sera demandé pour vous connecter. ",
+      "condsec1": "Condition secrète 1",
+      "cond1": "Quel est le nom de votre mentor professionnel ?",
+      "cond2": "Quel est le nom de votre premier client en tant qu'entreprise ?",
+      "cond3": "Quel est le nom de votre cabinet d'audit ou de votre comptable ?",
+      "select_question1": "Veuillez choisir la questio secète 1",
+      "select_question2": "Veuillez choisir la questio secète 2",
+      "condsec2": "Confirmer secrète 2",
+      "rep1": "Réponse 1",
+      "rep2": "Réponse 1",
+      "send_button": "Valider",
+      "confirmMotDePassealerte":"Vérifier votre mot de passe",
+      "password": "Créer votre mot de passe ",
+      "passwordalerte": "Le mot de passe doit comporter au moins 8 caractères, inclure au moins une lettre majuscule, une lettre minuscule, un chiffre et un caractère spécial.",
+      "confirm_passwordalerte": "Confirmer votre mot de passe",
+      "confirm_passwordalerte1": "Le mot de passe est une chaine au minimum de 8 caractères",      
+      "confirmMotDePassealerte1":"Le prénom ne peut pas contenir des chiffres"
+    },
+
+    "emailVerif":{  
+      "title": "Validation de l'Email",
+      "otp_placeholder": "Entrer OTP",
+      "verify_button": "Vérifier",
+      "resend_otp_info": "Vous pouvez re-envoyer le code OTP dans",
+      "time" : " secondes"
+    }
   }
 }
