--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -6,11 +6,11 @@
     "aboutUs": {
       "title": "À propos de nous",
       "subheading": "Garantir des transactions financières transparentes pour les besoins bancaires quotidiens",
-      "content": "BFI Bank s'engage à fournir des solutions bancaires innovantes adaptées aux besoins de nos clients. En mettant l’accent sur l’excellence et l’intégrité, nous offrons un service personnalisé et une expertise fiable pour aider les particuliers et les entreprises à atteindre leurs objectifs financiers.",
+      "content": "Bamboo s'engage à fournir des solutions bancaires innovantes adaptées aux besoins de nos clients. En mettant l’accent sur l’excellence et l’intégrité, nous offrons un service personnalisé et une expertise fiable pour aider les particuliers et les entreprises à atteindre leurs objectifs financiers.",
       "professionalTeam": "Équipe professionnelle",
-      "professionalTeamDesc": "Chez BFI Bank, notre équipe professionnelle s’engage à fournir des services financiers de premier ordre adaptés à vos besoins. Avec des années d’expérience et d’expertise, nous garantissons un soutien et des conseils supérieurs pour votre réussite financière.",
+      "professionalTeamDesc": "Chez Bamboo, notre équipe professionnelle s’engage à fournir des services financiers de premier ordre adaptés à vos besoins. Avec des années d’expérience et d’expertise, nous garantissons un soutien et des conseils supérieurs pour votre réussite financière.",
       "quickPayments": "Paiements rapides",
-      "quickPaymentsDesc": "Chez BFI Bank, nous accordons la priorité aux paiements rapides pour garantir des transactions fluides à nos clients. Grâce à nos systèmes de paiement efficaces, vous pouvez être sûr que vos transactions seront traitées rapidement et en toute sécurité, vous permettant ainsi de gérer vos finances avec facilité et commodité.",
+      "quickPaymentsDesc": "Chez Bamboo, nous accordons la priorité aux paiements rapides pour garantir des transactions fluides à nos clients. Grâce à nos systèmes de paiement efficaces, vous pouvez être sûr que vos transactions seront traitées rapidement et en toute sécurité, vous permettant ainsi de gérer vos finances avec facilité et commodité.",
       "yearsOfExperience": "Années d'expérience"
     },
     "blog": {
@@ -255,7 +255,7 @@
   },
 
   "dash":{
-    "title":"Bienvenue chez BFI BANK!",
+    "title":"Bienvenue chez Bamboo!",
     "subheading":"Commencez dès maintenant en remplissant avec vos données.",
     "welcomeButton":"C'est parti !",
     "nextButton":"Suivant",
@@ -348,7 +348,7 @@
   }
 ,
   "professionnel":{
-    "title":"Bienvenue chez BFI BANK!",
+    "title":"Bienvenue chez Bamboo!",
     "subheading":"Commencez dès maintenant en remplissant avec vos données.",
     "welcomeButton":"C'est parti !",
     "nextButton":"Suivant",
