fix homepage bug and chnage pwd

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -474,15 +474,15 @@
     "authentication":{
       "title": "Création de mot de passe",
       "description": "Ce mot de passe, une fois crée il vous sera demandé pour vous connecter. ",
-      "condsec1": "Condition secrète 1",
+      "condsec1": "Question secrète 1",
       "cond1": "Quel est le nom de votre mentor professionnel ?",
       "cond2": "Quel est le nom de votre premier client en tant qu'entreprise ?",
       "cond3": "Quel est le nom de votre cabinet d'audit ou de votre comptable ?",
-      "select_question1": "Veuillez choisir la questio secète 1",
-      "select_question2": "Veuillez choisir la questio secète 2",
-      "condsec2": "Confirmer secrète 2",
+      "select_question1": "Veuillez choisir la première question",
+      "select_question2": "Veuillez choisir la deuxieme question",
+      "condsec2": "Question secrète 2",
       "rep1": "Réponse 1",
-      "rep2": "Réponse 1",
+      "rep2": "Réponse 2",
       "send_button": "Valider",
       "confirmMotDePassealerte":"Vérifier votre mot de passe",
       "password": "Créer votre mot de passe ",
