--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -233,7 +233,9 @@
     "title":"Rejoignez-nous en tant que",
     "type1": "Particulier",
     "type2": "Professionnel", 
-    "type3": "Organisation"
+    "type3": "Organisation",
+    "tooltipPM" :"Le compte bancaire professionnel est idéal pour les entreprises clientes qui souhaitent obtenir une gestion financière efficace et optimiser leurs flux de trésorerie grâce à une gamme de services et d’assistance dédiés.",
+    "tooltipPP" :""
   },
 
   "password":{
@@ -306,7 +308,7 @@
       "piece_number": "Numéro de la pièce",
       "enter_valid_number": "Entrez un numéro valide",
       "piece_number_should_contain_only_numbers": "Le numéro de la pièce ne doit contenir que des chiffres",
-      "expiration_date": "Date d'expiration de la pièce",
+      "expiration_date": "Date de sortie de la pièce",
       "piece_photo": "Photo de la pièce",
       "valid_extensions_are": "Les extensions valides sont : .jpg, .jpeg, .png, .pdf",
       "referral_code": "Code parrainage",
@@ -442,7 +444,7 @@
       "piece_number": "Numéro de la pièce",
       "enter_valid_number": "Entrez un numéro valide",
       "piece_number_should_contain_only_numbers": "Le numéro de la pièce ne doit contenir que des chiffres",
-      "expiration_date": "Date d'expiration de la pièce",
+      "expiration_date": "Date de sortie de la pièce",
       "pieceType": "Type pièce juridique",
       "juridique_photo": "Pièce juridique",
       "valid_extensions_are": "Les extensions valides sont : .jpg, .jpeg, .png, .pdf",
