linked Frontend EER to Backend+linked Client Area to Client connected

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,11 +6,11 @@
       "aboutUs": {
         "title": "About Us",
         "subheading": "Ensuring Seamless Financial Transactions for Everyday Banking Needs",
-        "content": "Bamboo is committed to providing innovative banking solutions tailored to our clients' needs. With a focus on excellence and integrity, we offer personalized service and reliable expertise to help individuals and businesses achieve financial goals.",
+        "content": "DigiBank is committed to providing innovative banking solutions tailored to our clients' needs. With a focus on excellence and integrity, we offer personalized service and reliable expertise to help individuals and businesses achieve financial goals.",
         "professionalTeam": "Professional Team",
-        "professionalTeamDesc": "At Bamboo, our professional team is committed to delivering top-notch financial services tailored to your needs. With years of experience and expertise, we ensure superior support and guidance for your financial success.",
+        "professionalTeamDesc": "At DigiBank, our professional team is committed to delivering top-notch financial services tailored to your needs. With years of experience and expertise, we ensure superior support and guidance for your financial success.",
         "quickPayments": "Quick Payments",
-        "quickPaymentsDesc": "At Bamboo, we prioritize quick payments to ensure seamless transactions for our clients. With our efficient payment systems, you can trust that your transactions will be processed swiftly and securely, allowing you to manage your finances with ease and convenience.",
+        "quickPaymentsDesc": "At DigiBank, we prioritize quick payments to ensure seamless transactions for our clients. With our efficient payment systems, you can trust that your transactions will be processed swiftly and securely, allowing you to manage your finances with ease and convenience.",
         "yearsOfExperience": "Years of Experience"
       },
       "blog": {
