--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -316,7 +316,7 @@
         "general_conditions_description": "This document describes the terms of use of our web or mobile Banking application commonly referred to as the 'platform'. It determines the responsibilities of each party and informs you about intellectual property and the protection of your personal data.",
         "technical_partner": "Technical Partner",
         "ventis_technology": "Ventis Technology",
-        "simplified_joint_stock_company": "Simplified Joint Stock Company with a capital of 1,000,000 TND",
+        "simplified_joint_stock_company": "Simplified Joint Stock Company with a capital of 1,000,000 XAF",
         "address_batterie_iv": "Battery IV, Libreville, Gabon",
         "registered_commerce_registry_number": "Registered in the commerce registry under RCCM no. GA-LBV-01-2021-B16-00016",
         "nif": "NIF: 202101003285-T",
