--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -320,7 +320,7 @@
       "general_conditions_description": "Ce document décrit les modalités d'utilisation de notre application web ou mobile Banking que nous désignons communément par le terme « plateforme ». Il permet ainsi de déterminer les responsabilités de chacun, mais vous renseigne également sur la propriété intellectuelle et la protection de vos données personnelles.",
       "technical_partner": "Partenaire Technique",
       "ventis_technology": "Ventis Technologie",
-      "simplified_joint_stock_company": "Société par action Simplifiée au capital de 1 000 000 TND",
+      "simplified_joint_stock_company": "Société par action Simplifiée au capital de 1 000 000 XAF",
       "address_batterie_iv": "Batterie IV, Libreville, Gabon",
       "registered_commerce_registry_number": "Immatriculée au registre de commerce sous le RCCM n° GA-LBV-01-2021-B16-00016",
       "nif": "NIF: 202101003285-T",
@@ -461,7 +461,7 @@
       "general_conditions_description": "Ce document décrit les modalités d'utilisation de notre application web ou mobile Banking que nous désignons communément par le terme « plateforme ». Il permet ainsi de déterminer les responsabilités de chacun, mais vous renseigne également sur la propriété intellectuelle et la protection de vos données personnelles.",
       "technical_partner": "Partenaire Technique",
       "ventis_technology": "Ventis Technologie",
-      "simplified_joint_stock_company": "Société par action Simplifiée au capital de 1 000 000 TND",
+      "simplified_joint_stock_company": "Société par action Simplifiée au capital de 1 000 000 XAF",
       "address_batterie_iv": "Batterie IV, Libreville, Gabon",
       "registered_commerce_registry_number": "Immatriculée au registre de commerce sous le RCCM n° GA-LBV-01-2021-B16-00016",
       "nif": "NIF: 202101003285-T",
